# wiki

./: .buildinfo  .gitignore  CNAME  Makefile  README.md  apyb-cofre.sh  index.html  objects.inv  pyproject.toml  searchindex.js
.github/workflows/: deploy.yml  preview-fork.yml  preview.yml
_sources/: index.md.txt
_sources/a-associacao/: associacao.md.txt  comunicacao.md.txt  integrantes-da-associacao.md.txt
_sources/apyb/: premio-dorneles-tremea-jean-ferri.md.txt
_sources/associados/: associe-se.rst.txt
_sources/infraestrutura/: backup-associados.md.txt  domínios.md.txt  repositórios.md.txt  stripe.md.txt
_sources/pythonbrasil/: o-que-é.md.txt
_static/: documentation_options.js
_static/css/: custom.css
a-associacao/: index.html
a-associacao/associacao/: index.html
a-associacao/comunicacao/: index.html
a-associacao/estatuto/: index.html
a-associacao/financeiro/: index.html
a-associacao/integrantes-da-associacao/: index.html
apyb/eventos/: index.html
apyb/faq/: index.html
apyb/fundo-inclusão/: index.html
apyb/premio-dorneles-tremea-jean-ferri/: index.html
associados/assembleia/: index.html
associados/associe-se/: index.html
associados/guias/: index.html
genindex/: index.html
guias/como-organizar-eventos/: index.html
infraestrutura/assembleia/: index.html
infraestrutura/backup-associados/: index.html
infraestrutura/cofre/: index.html
infraestrutura/domínios/: index.html
infraestrutura/repositórios/: index.html
infraestrutura/stripe/: index.html
marketing/campanhas/: index.html
marketing/objetivo/: index.html
pr-preview/pr-21/: index.html  searchindex.js
pr-preview/pr-50/: .buildinfo  index.html  searchindex.js
pr-preview/pr-52/: searchindex.js
pr-preview/pr-53/: searchindex.js
pythonbrasil/cdc/: index.html
pythonbrasil/o-que-é/: index.html
search/: index.html
source/: conf.py  index.md
source/_ext/: github_issues_url.py  github_repos.py  template.py
source/a-associacao/: estatuto.md  (+3 more)
(+88 files in other folders)
