[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["Marco Rougeth <rougeth@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^5.1.1"
sphinx-autobuild = "^2021.3.14"
furo = "^2023.03.27"
myst-parser = "^0.18.0"
httpx = "^0.23.0"
ghp-import = "^2.1.0"
pytz = "^2023.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
